# servox-webhooks

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  servo_webhooks.py  servo_webhooks_test.py  test_servo_webhooks.py
.github/: dependabot.yml
.github/workflows/: docker.yaml  release.yml  test.yaml
