[tool.poetry]
name = "servo-webhooks"
version = "0.3.0"
description = "A flexible webhooks connector for Opsani Servo assemblies"
authors = ["Blake Watters <blake@opsani.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opsani/servox-webhooks"
repository = "https://github.com/opsani/servox-webhooks"

[tool.poetry.dependencies]
python = "^3.8"
servox = ">= 0.10.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-asyncio = "^0.15.1"
respx = "^0.16.3"
uvicorn = "^0.13.4"
fastapi = "^0.81.0"

[tool.poetry.plugins."servo.connectors"]
"servo-webhooks" = "servo_webhooks:WebhooksConnector"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
